# gsplat

./: Dockerfile  README.md  pyproject.toml
docker/: Dockerfile
examples/: benchmark.sh
examples/benchmarks/: basic.sh
gsplat/cuda/: _backend.py
main/.doctrees/: environment.pickle
