[project]
name = "gsplat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchvision>=0.19.1",
]

[tool.uv]
dev-dependencies = [
    "gsplat",
]

[tool.uv.sources]
gsplat = { workspace = true }
