# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "torch",
    "numpy",
    "rich",
]
build-backend = "setuptools.build_meta"

[project]
name = "gsplat"
version = "1.5.3"
description = "Python package for differentiable rasterization of gaussians"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fused-ssim",
    "imageio[ffmpeg]>=2.37.3",
    "jaxtyping>=0.3.9",
    "matplotlib>=3.10.9",
    "nerfview",
    "ninja>=1.13.0",
    "numpy>=2.1.2",
    "opencv-python>=4.13.0.92",
    "piexif>=1.1.3",
    "pillow>=11.0.0",
    "pycolmap",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "splines>=0.3.3",
    "tensorboard>=2.20.0",
    "tensorly>=0.9.0",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchmetrics[image]>=1.9.0",
    "torchvision>=0.19.1",
    "tqdm>=4.67.3",
    "tyro>=0.8.8",
    "viser>=0.2.23",
]

[tool.uv]
dev-dependencies = [
    "gsplat",
]

[tool.uv.sources]
gsplat = { workspace = true }
pycolmap = { git = "https://github.com/rmbrualla/pycolmap", rev = "cc7ea4b7301720ac29287dbe450952511b32125e" }
nerfview = { git = "https://github.com/nerfstudio-project/nerfview", rev = "4538024fe0d15fd1a0e4d760f3695fc44ca72787" }
fused-ssim = { git = "https://github.com/rahul-goel/fused-ssim", rev = "328dc9836f513d00c4b5bc38fe30478b4435cbb5" }

[tool.uv.extra-build-dependencies]
fused-ssim = ["torch>=2.4.1", "ninja"]
